--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Nature tour booking app written in NodeJS, Express & MongoDB. ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
   "repository": {
     "type": "git",
