add database variable

--- a/config.env
+++ b/config.env
@@ -1,5 +1,4 @@
 # set environment variables
 NODE_ENV=development
 PORT=3000
-USER=laura
-PASSWORD=123456
+DATABASE=mongodb+srv://laura:<PASSWORD>@cluster0.omgtaxx.mongodb.net/natours?retryWrites=true&w=majority
