--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
+    "mongoose": "^6.10.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
