--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "mongoose": "^6.10.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
