--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/LoryGlory/node-natours#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
