--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
