--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/LoryGlory/node-natours#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -30,9 +31,10 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1",
+    "helmet": "^3.23.3",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
+    "mapbox-gl": "^2.13.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
