--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mapbox-gl": "^2.13.0",
     "mongoose": "^6.10.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
     "slugify": "^1.6.5",
