--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
+    "stripe": "^11.14.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
