--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "NODE_ENV=production nodemon server.js",
     "start:dev": "NODE_ENV=dev nodemon server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
-    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
   },
   "repository": {
     "type": "git",
