--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "start:dev": "NODE_ENV=dev nodemon server.js",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./js --out-file bundle.js --public-url ./js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./js --out-file bundle.js --public-url ./js"
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
   },
   "repository": {
     "type": "git",
