--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "nodemailer": "^6.9.1",
+    "parcel": "^2.8.3",
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
