--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "slugify": "^1.6.5",
     "stripe": "^11.14.0",
     "validator": "^13.9.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "^0.1.1",
+    "parcel-bundler": "^1.12.3"
   },
   "devDependencies": {
     "eslint": "^8.35.0",
