--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "node-natours",
   "version": "1.0.0",
   "description": "Nature tour booking app written in NodeJS, Express & MongoDB. ",
+  "source": "public/js/index.js",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "start": " nodemon server.js",
+    "test": "jest --watchAll --verbose",
+    "watch": "parcel watch ",
+    "build": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled/"
+  },
+  "targets": {
+    "main": false
   },
   "repository": {
     "type": "git",
@@ -27,8 +29,7 @@
   },
   "homepage": "https://github.com/LoryGlory/node-natours#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "axios": "^1.3.4",
+    "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -46,6 +47,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "nodemailer": "^6.9.1",
+    "parcel": "^2.0.0",
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
@@ -62,6 +64,10 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.32.2",
     "parcel-bundler": "^1.12.5",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "punycode": "^1.4.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "string_decoder": "^1.3.0"
   }
 }
