--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "source": "public/js/index.js",
   "main": "app.js",
   "scripts": {
-    "start": " nodemon server.js",
+    "start": "node server.js",
     "test": "jest --watchAll --verbose",
     "watch": "parcel watch ",
     "build": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled/"
@@ -47,6 +47,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.1",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.21",
     "parcel": "^2.0.0",
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
